// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`invalid $multi call ($multi()): code 1`] = `"____(_G)"`;

exports[`invalid $multi call ($multi()): diagnostics 1`] = `"main.ts(2,9): error TSTL: The $multi() function can only be used in a return statement."`;

exports[`invalid $multi call ($multi): code 1`] = `"local ____ = ____"`;

exports[`invalid $multi call ($multi): diagnostics 1`] = `"main.ts(2,9): error TSTL: The $multi() function can only be used in a return statement."`;

exports[`invalid $multi call (({ $multi });): code 1`] = `"local ____ = nil"`;

exports[`invalid $multi call (({ $multi });): diagnostics 1`] = `"main.ts(2,12): error TSTL: The $multi() function can only be used in a return statement."`;

exports[`invalid $multi call ([] = $multi()): code 1`] = `
" = table.unpack(
    ____(_G)
)"
`;

exports[`invalid $multi call ([] = $multi()): diagnostics 1`] = `"main.ts(2,14): error TSTL: The $multi() function can only be used in a return statement."`;

exports[`invalid $multi call (const [] = $multi();): code 1`] = `
"____ = table.unpack(
    ____(_G)
)"
`;

exports[`invalid $multi call (const [] = $multi();): diagnostics 1`] = `"main.ts(2,20): error TSTL: The $multi() function can only be used in a return statement."`;
